Collapse Config, settings indirection and more (#42)
Various refactoring (as title says; collapsed two config classes), added settings.xml indirection, and lowered runtime requirement to Java 11 (IT runs only with 3.9.9 naturally).

Changes:
* added `dryRun`
* implemented `settings.xml` server/config indirection
* Lowered runtime requirement to Java 11
* collapsed `Config` and `SessionConfig`, `NjordSession` renamed to `Session`
* simplified session and config creation (now extension is mandatory to be installed to use Mojos)
* added Sisu-like ITs (mimicking what we want to achieve with Sisu)
* the `PublisherMojoSupport` heuristic improved
* added `deploy` publisher (does same thing as m-deploy-p does, but from locally staged repository)

This PR now allows setup like this:
0. set up Njord as described
1. add to `settings.xml` following (below is example for Sisu, that uses Sonatype Central Portal and has enabled snapshots)
```xml
    <server>
      <id>sisu-publish-service</id>
      <configuration>
        <njord.publisher>sonatype-cp</njord.publisher>
        <njord.releaseUrl>template:release-sca</njord.releaseUrl>
        <njord.snapshotUrl>template:snapshot-sca</njord.snapshotUrl>
      </configuration>
    </server>
```
2. edit POM to reflect "reality": `distributionManagement` should point to URLs from where published artifacts will be available once published (ie. central URL and Central Portal snapshots). Server ID of both should match the `sisu-publish-service` in `settings.xml`
3. perform `mvn deploy -P release` -- this will locally stage
4. perform `mvn njord:publish` -- this will publish